force-app/main/default/objects/Builder_Profile__c/Builder_Profile__c.object-meta.xml
<CustomObject>
    <label>Builder Profile</label>
    <nameField>
        <label>Builder Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Builder Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>