force-app/main/default/objects/Builder_Profile__c/fields/Build_Cycle_Primary__c.field-meta.xml
<CustomField>
    <fullName>Build_Cycle_Primary__c</fullName>
    <label>Build Cycle Primary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Express Production Cycle</fullName>
            </value>
            <value>
                <fullName>Normal Production Cycle</fullName>
            </value>
            <value>
                <fullName>Custom Production Cycle</fullName>
            </value>
            <value>
                <fullName>Custom Plus Production Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>