force-app/main/default/objects/Builder_Profile__c/fields/Builder__c.field-meta.xml
<CustomField>
    <fullName>Builder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Builder Profiles</relationshipLabel>
    <relationshipName>Builder_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>