force-app/main/default/objects/Builder_Profile__c/fields/Builder_Profile_Comments__c.field-meta.xml
<CustomField>
    <fullName>Builder_Profile_Comments__c</fullName>
    <label>Builder Profile Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>