force-app/main/default/objects/Builder_Profile__c/fields/Builder_Profile_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Builder_Profile_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Builder Profile ID (18)</label>
    <type>Text</type>
</CustomField>