force-app/main/default/objects/Builder_Profile__c/fields/Change_Order_received_by__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_received_by__c</fullName>
    <inlineHelpText>How will we be notified of change orders?</inlineHelpText>
    <label>Change Order received by:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SupplyPro</fullName>
            </value>
            <value>
                <fullName>Builder Site</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>