force-app/main/default/objects/Builder_Profile__c/fields/Change_Order_received_by_Other__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_received_by_Other__c</fullName>
    <inlineHelpText>Required when &quot;Other&quot; is selected from the &apos;Change Order received by&apos; picklist</inlineHelpText>
    <label>Change Order received by (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>