force-app/main/default/objects/Builder_Profile__c/fields/Day_Count_Build_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_Build_Sheet__c</fullName>
    <label>Day Count Build Sheet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>