force-app/main/default/objects/Builder_Profile__c/fields/Day_Count_Wood__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_Wood__c</fullName>
    <label>Day Count Wood</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>