force-app/main/default/objects/Builder_Profile__c/fields/Documents_included_with_selections__c.field-meta.xml
<CustomField>
    <fullName>Documents_included_with_selections__c</fullName>
    <label>Documents included with selections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flooring mark-ups</fullName>
            </value>
            <value>
                <fullName>Wall diagram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>