force-app/main/default/objects/Builder_Profile__c/fields/Master_Plans_received_by__c.field-meta.xml
<CustomField>
    <fullName>Master_Plans_received_by__c</fullName>
    <inlineHelpText>How to we get Master Plans?</inlineHelpText>
    <label>Master Plans received by:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>DropBox</fullName>
            </value>
            <value>
                <fullName>Builder Site</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>