force-app/main/default/objects/Builder_Profile__c/fields/Master_Plans_received_by_Other__c.field-meta.xml
<CustomField>
    <fullName>Master_Plans_received_by_Other__c</fullName>
    <inlineHelpText>Required when &quot;Other&quot; is selected from the &apos;Master Plans received by&apos; picklist</inlineHelpText>
    <label>Master Plans received by (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>