force-app/main/default/objects/Builder_Profile__c/fields/of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>of_Line_Items__c</fullName>
    <label># of Line Items</label>
    <summaryForeignKey>Builder_Profile_Line_Items__c.Builder_Profile__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>