force-app/main/default/objects/Builder_Profile__c/fields/Oldest_Revision__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Revision__c</fullName>
    <label>Oldest Revision</label>
    <summarizedField>Builder_Profile_Line_Items__c.Last_Revision__c</summarizedField>
    <summaryForeignKey>Builder_Profile_Line_Items__c.Builder_Profile__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>