force-app/main/default/objects/Builder_Profile__c/fields/Plan_Changes_Revisions__c.field-meta.xml
<CustomField>
    <fullName>Plan_Changes_Revisions__c</fullName>
    <inlineHelpText>How are we notified of plan changes/revisions?</inlineHelpText>
    <label>Plan Changes/Revisions received by:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>