force-app/main/default/objects/Builder_Profile__c/fields/Plan_Changes_Revisions_received_Other__c.field-meta.xml
<CustomField>
    <fullName>Plan_Changes_Revisions_received_Other__c</fullName>
    <inlineHelpText>Required when &quot;Other&quot; is selected from the &apos;Plan Changes/Revisions received by&apos; picklist</inlineHelpText>
    <label>Plan Changes/Revisions received (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>