force-app/main/default/objects/Builder_Profile__c/fields/PO_required_before_repair_work_performed__c.field-meta.xml
<CustomField>
    <fullName>PO_required_before_repair_work_performed__c</fullName>
    <inlineHelpText>Repairs Require P.O before work performed?</inlineHelpText>
    <label>PO required before repair work performed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>