force-app/main/default/objects/Builder_Profile__c/fields/PO_Revision_Contact__c.field-meta.xml
<CustomField>
    <fullName>PO_Revision_Contact__c</fullName>
    <inlineHelpText>Who do we submit PO revisions to?</inlineHelpText>
    <label>PO Revision Contact</label>
    <type>Email</type>
</CustomField>