force-app/main/default/objects/Builder_Profile__c/fields/PO_Revisions_received_by_Other__c.field-meta.xml
<CustomField>
    <fullName>PO_Revisions_received_by_Other__c</fullName>
    <label>PO Revisions received by (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>