force-app/main/default/objects/Builder_Profile__c/fields/PO_s_received_by__c.field-meta.xml
<CustomField>
    <fullName>PO_s_received_by__c</fullName>
    <inlineHelpText>How do we get POs?</inlineHelpText>
    <label>POs received by:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SupplyPro</fullName>
            </value>
            <value>
                <fullName>Builder Site</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>