force-app/main/default/objects/Builder_Profile__c/fields/PO_Selection_release_schedule__c.field-meta.xml
<CustomField>
    <fullName>PO_Selection_release_schedule__c</fullName>
    <inlineHelpText>When are PO and selections released?</inlineHelpText>
    <label>PO/Selection release schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After selections completed</fullName>
            </value>
            <value>
                <fullName>60 days prior to install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>