force-app/main/default/objects/Builder_Profile__c/fields/POs_received_by_Other__c.field-meta.xml
<CustomField>
    <fullName>POs_received_by_Other__c</fullName>
    <inlineHelpText>Required when &quot;Other&quot; is selected from the &apos;POs received by&apos; picklist</inlineHelpText>
    <label>POs received by (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>