force-app/main/default/objects/Builder_Profile__c/fields/QC_Build_Sheet__c.field-meta.xml
<CustomField>
    <fullName>QC_Build_Sheet__c</fullName>
    <label>QC Build Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>