force-app/main/default/objects/Builder_Profile__c/fields/QC_Fine_Tune_Checklist__c.field-meta.xml
<CustomField>
    <fullName>QC_Fine_Tune_Checklist__c</fullName>
    <label>QC Fine Tune Checklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>