force-app/main/default/objects/Builder_Profile__c/fields/QC_Vinyl_Install__c.field-meta.xml
<CustomField>
    <fullName>QC_Vinyl_Install__c</fullName>
    <label>QC Vinyl Install</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>