force-app/main/default/objects/Builder_Profile__c/fields/Selections_received_by__c.field-meta.xml
<CustomField>
    <fullName>Selections_received_by__c</fullName>
    <inlineHelpText>How do we get selections?</inlineHelpText>
    <label>Selections received by:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SupplyPro</fullName>
            </value>
            <value>
                <fullName>Builder Site</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>