force-app/main/default/objects/Builder_Profile__c/fields/Selections_received_by_Other__c.field-meta.xml
<CustomField>
    <fullName>Selections_received_by_Other__c</fullName>
    <label>Selections received by (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>