force-app/main/default/objects/Builder_Profile__c/fields/Standard_Installer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Standard_Installer_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pick the correct INSTALLER time zone and if it is supposed to include Saturday or just M-F</inlineHelpText>
    <label>Standard Installer Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Builder Profiles</relationshipLabel>
    <relationshipName>Builder_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>