force-app/main/default/objects/Builder_Profile__c/recordTypes/Community_Setup.recordType-meta.xml
<RecordType>
    <fullName>Community_Setup</fullName>
    <active>true</active>
    <label>Community Setup</label>
</RecordType>