force-app/main/default/objects/Builder_Profile__c/validationRules/Builder_Profile_Already_Exists_for_Accou.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Profile_Already_Exists_for_Accou</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(), 
NOT(
  ISBLANK(Builder__r.Builder_Profile_Community_Link__c )))</errorConditionFormula>
    <errorMessage>There is already a community profile for this account.</errorMessage>
</ValidationRule>