force-app/main/default/objects/Builder_Profile__c/validationRules/Builder_Profile_Change_Order_recd_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Profile_Change_Order_recd_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Change_Order_received_by__c ,&quot;Other&quot;),
ISBLANK(Change_Order_received_by_Other__c ))</errorConditionFormula>
    <errorDisplayField>Change_Order_received_by_Other__c</errorDisplayField>
    <errorMessage>A value must be provided when &quot;Other&quot; is selected from &apos;Change Order received by&apos; picklist</errorMessage>
</ValidationRule>