force-app/main/default/objects/Builder_Profile__c/validationRules/Builder_Profile_Master_Plans_recd_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Profile_Master_Plans_recd_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Master_Plans_received_by__c ,&quot;Other&quot;),
ISBLANK(Master_Plans_received_by_Other__c ))</errorConditionFormula>
    <errorDisplayField>Master_Plans_received_by_Other__c</errorDisplayField>
    <errorMessage>A value must be provided when &quot;Other&quot; is selected from &apos;Master Plans received by&apos; field</errorMessage>
</ValidationRule>