force-app/main/default/objects/Builder_Profile__c/validationRules/Builder_Profile_PO_Revisions_recd_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Profile_PO_Revisions_recd_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  PO_Revisions_received_by__c  ,&quot;Other&quot;),
ISBLANK(  PO_Revisions_received_by_Other__c  ))</errorConditionFormula>
    <errorDisplayField>PO_Revisions_received_by_Other__c</errorDisplayField>
    <errorMessage>A value must be provided when &quot;Other&quot; is selected from &apos;POs Revisions received by&apos; picklist.</errorMessage>
</ValidationRule>