force-app/main/default/objects/Builder_Profile__c/validationRules/Builder_Profile_Selections_recd_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Builder_Profile_Selections_recd_Other</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(   Selections_received_by__c  ,&quot;Other&quot;),
ISBLANK(  Selections_received_by_Other__c ))</errorConditionFormula>
    <errorDisplayField>Selections_received_by_Other__c</errorDisplayField>
    <errorMessage>A value must be provided when &quot;Other&quot; is selected from &apos;Selections received by&apos; picklist.</errorMessage>
</ValidationRule>